tests/models/u128/fail/min_length.rs
use dade::model;
#[model]
struct TestModel {
    #[field(min_length = 2)]
    value: u128,
}
fn main() {}
